@@ -1,3 +1,8 @@
+2009-08-17  Ian Piumarta  <piumarta@freebsd.piumarta.com>
+
+	* plugins/PseudoTTYPlugin/config.cmake: Check manually for
+	/usr/include/libutil.h because FreeBSD cannot #include it alone.
+
 2009-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* vm/config.cmake: Always set OPENGL_* to X11 values; on MacOSX
